# image_processer_opencv

./: CMakeLists.txt  README.md
shared-lib/: CMakeLists.txt
shared-lib/image_processor/: CMakeLists.txt  color_transfer.cpp  color_transfer.hpp  edge_detection.cpp  edge_detection.hpp  image_operation.hpp
shared-lib/qrcode_finder/: CMakeLists.txt  qrcode_finder.cpp  qrcode_finder.hpp
shared-lib/qrcode_scanner/: CMakeLists.txt  qrcode_finder.hpp  qrcode_finder_export.hpp
shared-lib/thread_pool/: CMakeLists.txt  thread_pool.cpp  thread_pool.hpp
src/: main.cpp
